--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -49,13 +49,13 @@ xplor4r:
 
 
 byunjiwoon:
-   name: Sujay kundu
-   username: xplor4r
-   site: https://sujaykundu.com
+   name: jiwoon
+   username: byun91
+   site: 
    avatar: byunjiwoon.jpg
    bio: "Android App Developer, based in Korea"
-   email: mail@sujaykundu.com
+   email: byun91@jobkorea.co.kr
    social:
       - title: "github"
-        url: "https://github.com/sujaykundu777"
+        url: "https://github.com/byunjiwoon"
 
